# dns-packet

./: Cargo.toml  LICENSE  Readme.md  query_packet.txt  response_packet.txt
src/: lib.rs  main.rs
