[package]
name = "dns-packet"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
pretty-hex = "0.2"
structopt = "0.3"
thiserror = "1.0"
